--- a/contact.html
+++ b/contact.html
@@ -105,51 +105,13 @@
       <!-- START CONTACT SECTION -->
       <section class="container container-fixed-lg p-t-65 p-b-100  sm-p-b-30 sm-m-b-30">
         <div class="row">
-          <div class="col-md-6">
-            <h2>Want to work together?</h2>
-            <div class="p-r-40 sm-p-r-0">
-              <p>Although my homebase is in South Florida, I'm open to relocating. If the opportunity seems right, I would love to join a team that will have a positive impact on the world.  If you just want to get more info or see if I can help you with a project, feel free to reach out as well! </p>
-              <br>
-              <br>
-              <div class="panel" id="contact-panel">
-                <p class="semi-bold no-margin">Fill up this form to contact us if you have any futher questions</p>
-                <form role="form" autocomplete="off" class="m-t-15" id="contact-form" action="_lib/mail.php" method="post">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <div class="form-group form-group-default required">
-                        <label class="control-label">First name</label>
-                        <input type="text" name="name" class="form-control" required>
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group form-group-default">
-                        <label class="control-label">Last name</label>
-                        <input type="text" name="last-name" class="form-control" required>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group form-group-default">
-                    <label class="control-label">Email</label>
-                    <input type="email" name="email" placeholder="This can be changed later" class="form-control" required>
-                  </div>
-                  <div class="form-group form-group-default">
-                    <label class="control-label">Message</label>
-                    <textarea name="message" placeholder="Type the message you wish to send" style="height:100px" class="form-control" required></textarea>
-                  </div>
-                  <div class="sm-p-t-10 clearfix">
-                    <p class="pull-left small hint-text m-t-5 font-arial">I hereby certify that the information above is true and accurate. </p>
-                    <button class="btn btn-primary font-montserrat all-caps fs-12 pull-right xs-pull-left">Submit</button>
-                  </div>
-                  <div class="clearfix"></div>
-                </form>
-              </div>
-            </div>
+          <div class="col-md-6 m-t-20">
+            <img src="assets/images/stagger.jpg" alt="">
           </div>
           <div class="col-md-6">
             <div class="visible-xs visible-sm b-b b-grey-light m-t-35 m-b-30"></div>
             <div class="p-l-40 sm-p-l-0 sm-p-t-10">
-              <h3>Showcase and guide users with a <br>
-beautiful front-end &amp; usable back-end.</h3>
+              <h2 class="p-b-15">Want to work together?</h2>
               <p>My motivation is to put together something that will tell a living story through the details and usability. This mission inspires me to jump out of bed each day.</p>
               <br>
               <div class="row">
@@ -157,20 +119,20 @@ beautiful front-end &amp; usable back-end.</h3>
                   <h5 class="block-title hint-text m-b-0">Phone</h5>
                   <address class="m-t-10">Feel free to send me
                                           <br>a text or give me a call.</address>
-                  <p class="hint-text m-t-15"><span class="fs-14 bold">(954) 478-0102</span></p>
+                  <p class="hint-text m-t-10"><span class="fs-14 bold">(954) 478-0102</span></p>
                 </div>
                 <div class="col-sm-6">
                   <h5 class="block-title hint-text m-b-0">Email</h5>
-                  <br><h5 class="m-t-10"><a href="mailto:alfredo.i.urdaneta@gmail.com"><i class="social-icon fa fa-envelope fa-4x"></i>
+                  <br><h5 class="m-t-5"><a href="mailto:alfredo.i.urdaneta@gmail.com"><i class="social-icon fa fa-envelope fa-4x"></i>
                             </h5>
                 </div>
                 <div class="col-sm-6">
-                  <h5 class="block-title hint-text m-t-35 m-b-0">Linkedin</h5>
+                  <h5 class="block-title hint-text m-t-30 m-b-0">Linkedin</h5>
                   <br><h5 class="m-t-15"><a href="http://www.linkedin.com/in/alfredourdaneta"><i class="social-icon fa fa-linkedin fa-4x"></i></a>
                             </h5>
                 </div>
                 <div class="col-sm-6">
-                  <h5 class="block-title hint-text m-t-35 m-b-0">Angel List</h5>
+                  <h5 class="block-title hint-text m-t-30 m-b-0">Angel List</h5>
                   <br><h5 class="m-t-15"><a href="http://www.angel.co/alfredourdaneta"><i class="social-icon fa fa-angellist fa-4x"></i></a>
                             </h5>
                 </div>
@@ -235,7 +197,6 @@ beautiful front-end &amp; usable back-end.</h3>
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="pages/js/pages.image.loader.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <!-- BEGIN SWIPER DEPENDENCIES -->
     <script type="text/javascript" src="assets/plugins/swiper/js/swiper.jquery.min.js"></script>
