--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                           </a>
               </li>
               <li>
-                <a href="index.html" data-text="Home">About Me 
+                <a href="about.html" data-text="Home">About Me 
                             <span data-text="Welcome">See more</span>
                           </a>
               </li>
