--- a/portfolio.html
+++ b/portfolio.html
@@ -105,9 +105,9 @@
       <!-- START PORTFOLIO SECTION -->
       <section class="p-b-40 p-t-55">
         <div class="container">
-          <div class="m-b-30">
-            <h1 class="text-center">You're in good hands.</h1>
-            <div class="b-b b-grey m-t-30"></div>
+          <div class="m-b-40">
+            <h1 class="text-center p-b-40">You're in good hands.</h1>
+            <div class="b-b b-grey m-t-30 m-b-30"></div>
              <h3 class="text-center">My Work. Click them, they don't bite.</h3>
           </div>
         </div>
@@ -208,33 +208,81 @@
       </section>
       <!-- END PORTFOLIO SECTION -->
       <!-- BEGIN CONTENT SECTION -->
-      <section class="p-b-70 p-t-40">
+      <section class="p-b-85 p-t-75 bg-master-white">
         <div class="container">
-          <h5 class="block-title hint-text no-margin">There's a lot more.</h5>
+          <div class="md-p-l-20 xs-no-padding clearfix">
+            <div class="row visible-sm">
+              <div class="col-sm-8 m-b-40">
+                <h2>The Process. Creativity, thoughtful-planning, time and effort, and creation.</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="clearfix hidden-sm text-center m-b-30">
+                <h1>The Process.</h1>
+              </div>
+              <div class="col-md-4 col-sm-4 p-t-90">
+                <div class="device_morph" data-pages="auto-scroll">
+                  <img alt="" class="xs-image-responsive-height image-responsive-width" src="assets/images/b_phone.png" id="mobile_phone">
+                  <div class="screen">
+                    <div class="iphone-border">
+                      <img src="assets/images/mobile.png" class="image-responsive-height lazy" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-7 col-md-offset-1  col-sm-offset-2 col-sm-6">
+                <div class="col-md-9 col-md-offset-1 col-sm-11">
+                  <div class="p-t-30">
+                    <dl>
+                      <dt class="block-title p-b-15 text-black">Idea <i class="fa fa-lightbulb-o fa-2x m-l-10"></i></dt>
+                      <dd class="m-b-30">It starts with an idea. I spend my days thinking of new technologies that could make life easier. Once I have a basic outline of how I can solve a certain problem, I create an ideal design blueprint for what I will be creating.</dd>
+                    </dl>
+                    <dl>
+                      <dt class="block-title p-b-15 text-black">Develop <i class="fa fa-code fa-2x m-l-10"></i></dt>
+                      <dd class="m-b-30">Time to code. I start with all my basic features to make sure the base of my application will work. Back-end frameworks like Rails or Node allow for a broad range of data customization, user interface, and dynamic content generation. Front-end frameworks like Bootstrap and React help the development stage be more efficient and more functional than ever before.</dd>
+                    </dl>
+                    <dl>
+                      <dt class="block-title text-black p-b-15 ">Launch <i class="fa fa-paper-plane-o fa-2x m-l-10"></i></dt>
+                      <dd class="m-b-30">Once the design and development of the project is near completion, it is time to deploy the project. During this stage, I push projects live on a web server or a service like Heroku to get it on the web. Now I can fix any mobile view or general bugs. Once all is considered and revisions have been implemented I can finally push out version 1.0.</dd>
+                    </dl>
+                    <dl>
+                      <dt class="block-title text-black p-b-15 ">Finish <i class="fa fa-check-square-o fa-2x m-l-10"></i></dt>
+                      <dd class="m-b-30">This is the best stage. There's nothing like seeing my initially vague idea become reality. It makes the whole process worth it. I strive to deliver the best product I can, with thoughtful design, bug free development, and extensive iterations to cater to all sorts of users. </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- END CONTENT SECTION -->
+      <!-- BEGIN CONTENT SECTION -->
+      <section class="p-b-70 p-t-30">
+        <div class="container text-center">
+          <h3 class="block-title no-margin">There's a lot more.</h3>
           <h5>If you want to see more of my projects, or any of their code, check out my <a href="http://www.github.com/aurda012"><button type="button" class="btn btn-info m-l-5 m-b-5">Github!</button></a></h5>
         </div>
       </section>
       <!-- END CONTENT SECTION -->
       <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/table.jpg">
-      </section>
-      <!-- BEGIN CONTENT SECTION -->
-      <section class="p-b-50 p-t-50 bg-master-darkest">
-      <div class="container p-b-50 p-t-50">
+        <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
-          <div class="col-xs-height col-middle text-center">
+          <div class="text-center">
             <div class="text-center">
-              <h1 class="text-white col-sm-12 p-b-80">LET'S TALK ABOUT THE NEXT <strong>BIG</strong> THING.</h1>
-              <ul class="text-white m-r-40">
-                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-4x"></i></li>
-                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-linkedin fa-4x"></i></a></li>
-                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-40"><i class="social-icon fa fa-angellist fa-4x"></i></a></li>
-                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-40"><i class="social-icon fa fa-github fa-4x"></i></a></li>              
+              <h1 class="text-white text-center p-b-80" style="font-weight: 400; text-shadow: 1px 1px black;">LET'S TALK ABOUT THE NEXT <br><strong>BIG</strong> THING.</h1>
+              <ul class="text-white text-center p-l-20">
+                <li class="inline"><a href="mailto:alfredo.i.urdaneta@gmail.com" class="text-white"><i class="social-icon fa fa-envelope fa-3x" style="text-shadow: 1px 1px black"></i></li>
+                <li class="inline"><a href="http://www.linkedin.com/in/alfredourdaneta" class="text-white p-l-35"><i class="social-icon fa fa-linkedin fa-3x" style="text-shadow: 1px 1px black"></i></a></li>
+                <li class="inline"><a href="http://www.angel.co/alfredourdaneta" class="text-white p-l-35"><i class="social-icon fa fa-angellist fa-3x" style="text-shadow: 1px 1px black"></i></a></li>
+                <li class="inline"><a href="http://www.github.com/aurda012" class="text-white p-l-35"><i class="social-icon fa fa-github fa-3x" style="text-shadow: 1px 1px black"></i></a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      </section>
+      <!-- BEGIN CONTENT SECTION -->
     <!-- START FOOTER -->
     <section class="p-b-10 p-t-15">
       <div class="container">
