--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
-    <title>Pages - Front End</title>
+    <title>Alfredo Urdaneta | Skills</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="apple-touch-icon" href="pages/ico/60.png">
     <link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png">
@@ -62,19 +62,27 @@
           <div class="header-inner">
             <ul class="menu">
               <li>
-                <a href="index.html" data-text="Home">Home </a>
+                <a href="index.html" data-text="Home">Home 
+                            <span data-text="Welcome">Welcome</span>
+                          </a>
               </li>
               <li>
-                <a class="active" href="skills.html" data-text="Skills">My Skills </a>
+                <a class="active" href="skills.html" data-text="Skills">My Skills 
+                            <span data-text="Technical">Technical</span>
+                          </a>
               </li>
               <li>
-                <a href="about.html" data-text="About">About Me </a>
+                <a href="about.html" data-text="About">About Me 
+                            <span data-text="See more">See more</span>
+                          </a>
               </li>
               <li>
-                <a href="portfolio.html" data-text="Portofolio">Portfolio  </a>
+                <a href="portfolio.html" data-text="Portofolio">Portfolio 
+                            <span data-text="Clients">Work</span></a>
               </li>
               <li>
-                <a href="contact.html" data-text="Contact Us">Contact Me </a>
+                <a href="contact.html" data-text="Contact Us">Contact Me
+                            <span data-text="Get in touch">Get in touch </span></a>
               </li>
             </ul>
             <!-- BEGIN COPYRIGHT FOR MOBILE -->
@@ -137,8 +145,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h6 class="block-title m-b-0">Discover</h6>
-            <h1 class="m-t-5 light">Something Different, Something New.</h1>
+            <h6 class="block-title m-b-0">Full-Stack Development</h6>
+            <h1 class="m-t-5 light">Learning More, Every Day.</h1>
             <p class="m-t-20">Our long standing vision has been to bypass the usual admin dashboard structure, and move forward with a more sophisticated yet simple framework that would create a credible impact on the many conventional dashboard users.
             </p>
             <img src="assets/images/arrow_down.png" class="m-t-30" alt="">
@@ -148,19 +156,74 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START CONTENT SECTION -->
-    <section class="p-b-100 p-t-30">
-      <div class="container-sm-height">
+    <section class="p-b-60 p-t-60">
+      <div class="container-sm-height text-center">
         <div class="row row-sm-height sm-m-l-15 sm-m-r-15">
-          <div class="col-lg-2 col-md-1 hidden-sm"></div>
-          <div class="col-sm-6 col-lg-4 col-md-5 col-sm-height col-middle sm-text-center">
-            <img class="p-r-40 m-t-10 xs-image-responsive-height sm-no-padding lazy" src="assets/images/ipad_2.jpg" alt="">
-          </div>
           <div class="col-sm-6 col-sm-height col-middle col-lg-4 col-md-4 xs-text-center sm-p-l-30">
-            <h1 class="light md-no-margin sm-m-t-30">Make your imagination<br>Alive with pages.</h1>
-            <h6 class="block-title m-t-50">launch your design <i class="pg-arrow_right m-l-10"></i></h6>
-            <p class="m-t-15">Our long standing vision has been to bypass the usual admin dashboard structure, and move forward with a more vary and sophisticated yet simple framework </p>
-            <p class="muted font-arial small-text m-t-30">A product is accessible when all people&mdash;regardless of ability&mdash;can navigate it,
-              <br> understand it, and use it to achieve their goals.</p>
+            <h1 class="light md-no-margin sm-m-t-30">Front-End.</h1>
+            <h6 class="block-title m-t-30 m-b-15">Languages & Frameworks <i class="pg-arrow_right m-l-10"></i></h6>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="95%"></div>
+              </div>
+              <h3 class="no-margin">
+                            UX/UI
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="95">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="85%"></div>
+              </div>
+              <h3 class="no-margin">
+                            Javascript
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="85">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="75%"></div>
+              </div>
+              <h3 class="no-margin">
+                            React
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="75">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="90%"></div>
+              </div>
+              <h3 class="no-margin">
+                            Bootstrap
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="90">0</span>%
+              </p>
+              <p></p>
+            </div><div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="80%"></div>
+              </div>
+              <h3 class="no-margin">
+                            jQuery
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="80">0</span>%
+              </p>
+              <p></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-sm-height col-middle sm-text-center m-r-0">
+            <img class="p-l-100 m-t-10 xs-image-responsive-height sm-no-padding lazy" src="assets/images/ipad.png" alt="">
           </div>
           <div class="col-lg-2 col-md-1 hidden-sm"></div>
         </div>
@@ -168,89 +231,78 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START CONTENT SECTION -->
-    <section id="demo-content-1" class="p-b-100 bg-master-lighter relative" data-pages="parallax">
-      <div class="container p-b-50">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
-            <div class="text-center relative p-b-100 m-b-70 p-t-40">
-              <h6 class="block-title m-t-70 m-b-0">Explore</h6>
-              <h1 class="col-sm-12 p-b-10 m-t-5">Unlimited ways to
-organize your
-content</h1>
-              <button type="button" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Explore</button>
-              <br>
+    <section class="p-b-90 p-t-60">
+      <div class="container-sm-height text-center">
+        <div class="row row-sm-height sm-m-l-15 sm-m-r-15">
+          <div class="col-sm-6 col-sm-height col-middle col-lg-4 col-md-4 xs-text-center sm-p-l-30">
+            <h1 class="light md-no-margin sm-m-t-30">Back-End.</h1>
+            <h6 class="block-title m-t-30 m-b-15">Frameworks & Technologies <i class="pg-arrow_right m-l-10"></i></h6>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="95%"></div>
+              </div>
+              <h3 class="no-margin">
+                            Ruby On Rails
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="95">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="65%"></div>
+              </div>
+              <h3 class="no-margin">
+                            Redux
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="65">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="85%"></div>
+              </div>
+              <h3 class="no-margin">
+                            Node
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="85">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-12">
+              <div class="progress progress-small m-t-15">
+                <div class="progress-bar progress-bar-black" data-pages-animate="progressbar" data-percentage="75%"></div>
+              </div>
+              <h3 class="no-margin">
+                            SQL
+                        </h3>
+              <p class="font-arial hint-text fs-12">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="75">0</span>%
+              </p>
+              <p></p>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="top-left bottom-right no-overflow full-width full-height">
-        <img src="assets/images/elements_1.png" class="inner lazy" alt="">
-      </div>
-      <img class="iphone lazy" src="assets/images/iphone.png" data-pages="float" data-max-top-translate="40" data-max-bottom-translate="40" data-speed="0.1" data-delay="1000" data-curve="ease" alt="">
-    </section>
-    <!-- END CONTENT SECTION -->
-    <!-- START CONTENT SECTION -->
-    <section class="p-b-100 p-t-50 m-t-100">
-      <div class="container">
-        <div class="col-md-8 col-md-offset-2 ">
-          <div class="text-center">
-            <img src="assets/images/arrow_down.png" alt="">
-            <h5 class="block-title m-t-40 hint-text m-b-0">Endless Possibilities </h5>
-            <h1 class="light m-t-5">Page state of the art UI bundle</h1>
-            <h5 class="hint-text">From hundreds of pre-made content block</h5>
+          <div class="col-sm-6 col-sm-height col-middle sm-text-center m-r-0">
+            <img class="p-l-100 m-t-10 xs-image-responsive-height sm-no-padding lazy" src="assets/images/backend.png" alt="">
           </div>
-          <div class="row m-t-45">
-            <div class="col-sm-4">
-              <div class="progress progress-small m-t-15">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-pages-animate="progressbar" data-percentage="79%">
-                </div>
-              </div>
-              <h3 class="no-margin"><span data-pages-animate="number" data-value="200" data-animation-duration="800">0</span>%</h3>
-              <p class="font-arial hint-text fs-12">Smoother
-              </p>
-              <p>
-              </p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small m-t-15">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-pages-animate="progressbar" data-percentage="79%">
-                </div>
-              </div>
-              <h3 class=" no-margin"><span data-pages-animate="number" data-value="200" data-animation-duration="800">0</span>%</h3>
-              <p class="font-arial hint-text fs-12">Lighter
-              </p>
-              <p>
-              </p>
-            </div>
-            <div class="col-sm-4">
-              <div class="progress progress-small m-t-15">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-pages-animate="progressbar" data-percentage="79%">
-                </div>
-              </div>
-              <h3 class=" no-margin"><span data-pages-animate="number" data-value="200" data-animation-duration="800">0</span>ma</h3>
-              <p class="font-arial hint-text fs-12">Micro Awesomness
-              </p>
-              <p>
-              </p>
-            </div>
-          </div>
+          <div class="col-lg-2 col-md-1 hidden-sm"></div>
         </div>
       </div>
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START CONTENT SECTION -->
-    <section class="p-b-50 p-t-50 bg-master-dark">
+    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/gallery_hero_2.jpg">
       <div class="container p-b-50 p-t-50">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <div class="col-xs-height col-middle">
               <div class="text-center">
-                <h1 class="text-white col-sm-12 p-b-10">Crafted with detail for a great start!
-                        front-end plus back-end.</h1>
-                <img src="assets/images/themeforest_logo.png" class="m-t-5" alt="">
-                <p class="fs-12 text-white m-t-30 font-arial"><span class="hint-text">Exclusive only at
-                        Envato Marketplace,<br></span> Themeforest See Standard licenses &amp; Extended licenses
-                </p>
+                <h1 class="text-white col-sm-12 p-t-60" style="text-shadow: 1px 1px black">Always crafted with detail.
+                        Front-end & Back-end.</h1>
               </div>
             </div>
           </div>
